update intro page with new design, still need to manage the background

--- a/Yella/Yella.csproj
+++ b/Yella/Yella.csproj
@@ -124,7 +124,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Resources\Images\Intro\" />
+	  <MauiImage Include="Resources\Images\Intro\intro1.png" />
+	  <MauiImage Include="Resources\Images\Intro\intro2.jpeg" />
 	</ItemGroup>
 
 </Project>
