change icon, new command for next page

--- a/Yella/Yella.csproj
+++ b/Yella/Yella.csproj
@@ -71,10 +71,6 @@
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appicon.svg" Color="#512BD4" />
-		<MauiSplashScreen Include="Resources\Images\splash.png">
-		  <Color>#ffffff</Color>
-		  <BaseSize>512,512</BaseSize>
-		</MauiSplashScreen>
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.png" Color="#ffffff" BaseSize="512,512" />
@@ -91,12 +87,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiImage Remove="Resources\Images\splash.png" />
-	</ItemGroup>
-
-	<ItemGroup>
 	  <None Remove="Resources\Images\octopus.png" />
-	  <None Remove="Resources\Images\splash.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -115,6 +106,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="views\DashboardView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="views\IntroPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
