Home page has dounght bar chart now, almost homepage completed, only need to make pie chart has a different target for kpi

--- a/Yella/Yella.csproj
+++ b/Yella/Yella.csproj
@@ -163,6 +163,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Controls\CircularProgressBar.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="views\BalancePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
