--- a/Yella/Yella.csproj
+++ b/Yella/Yella.csproj
@@ -134,6 +134,7 @@
 		<PackageReference Include="LiveChartsCore.SkiaSharpView.Maui" Version="2.0.0-beta.920" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Microsoft.UI.Xaml" Version="2.8.5" />
+		<PackageReference Include="The49.Maui.BottomSheet" Version="1.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
