--- a/Yella/Yella.csproj
+++ b/Yella/Yella.csproj
@@ -117,6 +117,9 @@
 	  <None Remove="Resources\Images\ellipsis-vertical-solid.svg" />
 	  <None Remove="Resources\Images\file-invoice-dollar-solid.svg" />
 	  <None Remove="Resources\Images\house-solid.svg" />
+	  <None Remove="Resources\Images\icon_folder.png" />
+	  <None Remove="Resources\Images\icon_house.png" />
+	  <None Remove="Resources\Images\icon_pin.png" />
 	  <None Remove="Resources\Images\location-arrow-solid.svg" />
 	  <None Remove="Resources\Images\map-location-dot-solid.svg" />
 	  <None Remove="Resources\Images\money-dollar-solid.svg" />
@@ -134,6 +137,8 @@
 		<PackageReference Include="LiveChartsCore.SkiaSharpView.Maui" Version="2.0.0-beta.920" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Microsoft.UI.Xaml" Version="2.8.5" />
+		<PackageReference Include="SimpleToolkit.Core" Version="3.0.0" />
+		<PackageReference Include="SimpleToolkit.SimpleShell" Version="3.0.1" />
 		<PackageReference Include="The49.Maui.BottomSheet" Version="1.0.2" />
 	</ItemGroup>
 
@@ -168,6 +173,12 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="views\BalancePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="views\Controls\TabBarIconView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="views\Controls\TabBarView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="views\IntroPage.xaml">
