--- a/Yella/Yella.csproj
+++ b/Yella/Yella.csproj
@@ -132,6 +132,7 @@
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
 		<PackageReference Include="LiveChartsCore.SkiaSharpView" Version="2.0.0-beta.920" />
 		<PackageReference Include="LiveChartsCore.SkiaSharpView.Maui" Version="2.0.0-beta.920" />
+		<PackageReference Include="M.BindableProperty.Generator" Version="0.11.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="Microsoft.UI.Xaml" Version="2.8.5" />
 		<PackageReference Include="The49.Maui.BottomSheet" Version="1.0.2" />
