--- a/Yella/Yella.csproj
+++ b/Yella/Yella.csproj
@@ -93,7 +93,7 @@
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appicon.svg" Color="#512BD4" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.png" Color="#ffffff" BaseSize="512,512" />
+		<MauiSplashScreen Include="Resources\Splash\yella.png" Color="#06C167" BaseSize="512,512" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
