introduce maui first timeline progress tracking

--- a/Yella/Yella.csproj
+++ b/Yella/Yella.csproj
@@ -168,6 +168,9 @@
 	  <MauiXaml Update="Controls\CircularProgressBar.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="UserControl\TimelineTracker.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="views\BalancePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
